--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 
 name = "lrparse"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["Jona Stubbe (CrystalGamma) <dev@jona-stubbe.de>"]
 
 
 [dependencies.lexer]
-path = "../lexer"
+path = "lexer"
 
-[dependencies.nester]
-path = "../nester"
+[dependencies.lookahead]
+git = "https://github.com/CrystalGamma/rust-lookahead"
